[package]
name = "rstw"
version = "0.1.0"
authors = ["Eiyeron"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.20"
rand_distr = "0.4"
image = "0.23"

[dependencies.rand]
version = "0.8"
features = ["std", "small_rng"]